Fix selector for breadcrumb contrast: use .breadcrumb-item a
Update the CSS selector to target breadcrumb links more specifically.

--- a/app/assets/stylesheets/hyku.scss
+++ b/app/assets/stylesheets/hyku.scss
@@ -768,6 +768,6 @@ dd {
 }
 
 // Accessibility fix for breadcrumb contrast on System Status page
-.breadcrumb a {
+.breadcrumb-item a {
     color: #212529;
 }
